--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/hunterwk/burger-time#readme",
   "dependencies": {
+    "exphbs": "^1.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
+    "handlebars": "^4.7.6",
     "mysql": "^2.18.1"
   }
 }
